--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ a{
 }
 
 /* header start */
-.nav,
+/* .nav,
 .navigaion,
 .nav__list{
     background: #F9F6E5;
@@ -117,10 +117,10 @@ a{
 }
 .header__row_btn:hover{
     color: #6BB071;
-}
+} */
 /* header end */
 /* recent start */
-.recent{
+/* .recent{
     background: #F9F6E5;
     margin-bottom: 40px;
 }
@@ -350,11 +350,11 @@ a{
     grid-area: l4;
     
 }
-
+ */
 
 /* recent end */
 /* latest start */ 
-.tales__content{
+/* .tales__content{
     margin-bottom: 50px;
 }
 .tales__h2{
@@ -543,13 +543,9 @@ a{
 }
 .latest__h4{
     padding-left: 20px;
-}
-/* .latest__grid{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(13, .2fr);
 } */
-.latest__grid{
+
+/* .latest__grid{
     display: flex;
     justify-content: center;
     display: grid;
@@ -640,7 +636,7 @@ a{
 .carousel__h3{
     margin-bottom: 80px;
 }
-
+ */
 
 
 
@@ -648,7 +644,7 @@ a{
 
 /* footer start */
 
-footer{
+/* footer{
     background: #6BB071;
     color: #fff;
     position: relative;
@@ -721,7 +717,7 @@ footer{
     font-size: 20px;
     color: #6BB071;
     padding-left: 10px;
-}
+} */
 
 /* footer end */
 
